# mangadex-api

./: .cargo_vcs_info.json  .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  LICENSE-MIT  README.md
mangadex-api/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  deny.toml  rustfmt.toml
mangadex-api-input-types/: Cargo.toml
mangadex-api-input-types/src/: chapter.rs  cover.rs  feed.rs  follows.rs  lib.rs  report.rs  scanlation_group.rs  settings.rs  upload.rs
mangadex-api-input-types/src/api_client/: create.rs  delete.rs  edit.rs  get_unique.rs  list.rs
mangadex-api-input-types/src/at_home/: server.rs
mangadex-api-input-types/src/author/: create.rs  edit.rs  get_unique.rs  list.rs
mangadex-api-input-types/src/captcha/: solve.rs
mangadex-api-input-types/src/chapter/: edit.rs  get_unique.rs  list.rs
mangadex-api-input-types/src/cover/: edit.rs  get_unique.rs  list.rs  upload.rs
mangadex-api-input-types/src/custom_list/: add_manga.rs  create.rs  get_lists.rs  get_user_lists.rs  remove_manga.rs  update.rs
mangadex-api-input-types/src/feed/: custom_list_feed.rs  followed_manga_feed.rs
mangadex-api-input-types/src/follows/: groups.rs  lists.rs  mangas.rs  users.rs
mangadex-api-input-types/src/forums/: create.rs
mangadex-api-input-types/src/legacy/: mapping.rs
mangadex-api-input-types/src/manga/: aggregate.rs  create.rs  create_relation.rs  feed.rs  get_draft.rs  get_drafts.rs  get_relation_list.rs  get_unique.rs  list.rs  random.rs  submit_draft.rs  update.rs
mangadex-api-input-types/src/oauth/: login.rs
mangadex-api-input-types/src/rating/: create_or_update.rs
mangadex-api-input-types/src/read_marker/: batch_read_marker.rs  read_markers.rs
mangadex-api-input-types/src/report/: create.rs  list.rs  list_by_category.rs
mangadex-api-input-types/src/scanlation_group/: create.rs  edit.rs  get_unique.rs  list.rs
mangadex-api-input-types/src/settings/: create.rs  create_templates.rs
mangadex-api-input-types/src/statistics/: chapters.rs  groups.rs  mangas.rs
mangadex-api-input-types/src/upload/: begin_edit_session.rs  begin_session.rs  check_approval_required.rs  commit.rs  delete_uploaded_image.rs  delete_uploaded_images.rs  upload_image.rs
mangadex-api-input-types/src/user/: list.rs
mangadex-api-params-types/: Cargo.toml
mangadex-api-params-types/src/: api_client.rs  custom_list.rs  lib.rs  manga.rs  read_marker.rs  statistics.rs  upload.rs
mangadex-api-params-types/src/api_client/: create.rs  delete.rs  edit.rs  get_unique.rs  list.rs
mangadex-api-params-types/src/at_home/: server.rs
mangadex-api-params-types/src/author/: create.rs  edit.rs  get_unique.rs  list.rs
mangadex-api-params-types/src/captcha/: solve.rs
mangadex-api-params-types/src/chapter/: edit.rs  get_unique.rs  list.rs
mangadex-api-params-types/src/cover/: edit.rs  get_unique.rs  list.rs  upload.rs
mangadex-api-params-types/src/custom_list/: add_manga.rs  create.rs  get_lists.rs  get_user_lists.rs  remove_manga.rs  update.rs
mangadex-api-params-types/src/feed/: custom_list_feed.rs  followed_manga_feed.rs
mangadex-api-params-types/src/follows/: groups.rs  lists.rs  mangas.rs  users.rs
mangadex-api-params-types/src/forums/: create.rs
mangadex-api-params-types/src/legacy/: mapping.rs
mangadex-api-params-types/src/manga/: aggregate.rs  create.rs  create_relation.rs  feed.rs  get_draft.rs  get_drafts.rs  get_relation_list.rs  get_unique.rs  list.rs  random.rs  submit_draft.rs  update.rs
mangadex-api-params-types/src/oauth/: login.rs
mangadex-api-params-types/src/rating/: create_or_update.rs
mangadex-api-params-types/src/read_marker/: batch_read_marker.rs  read_markers.rs
mangadex-api-params-types/src/report/: create.rs  list.rs  list_by_category.rs
mangadex-api-params-types/src/scanlation_group/: create.rs  edit.rs  get_unique.rs  list.rs
mangadex-api-params-types/src/settings/: create.rs  create_templates.rs
mangadex-api-params-types/src/statistics/: chapters.rs  groups.rs  mangas.rs
mangadex-api-params-types/src/upload/: begin_edit_session.rs  begin_session.rs  commit.rs  delete_uploaded_image.rs  delete_uploaded_images.rs  upload_image.rs
mangadex-api-params-types/src/user/: list.rs
mangadex-api-schema/: Cargo.toml  Cargo.toml.orig  README.md
mangadex-api-schema/src/: error.rs  lib.rs  utils.rs  v5.rs
mangadex-api-schema/src/bind/: mod.rs
mangadex-api-schema/src/v5/: api_client.rs  (+36 more)
mangadex-api-schema/tests/: author.rs  chapter.rs  cover.rs  groups.rs  manga.rs  user.rs
mangadex-api-tests/: Cargo.toml
mangadex-api-tests/src/: main.rs
mangadex-api-types/: Cargo.toml  Cargo.toml.orig  README.md
mangadex-api-types/src/: api_client_profile.rs  api_client_state.rs  custom_list_visibility.rs  error.rs  forum_thread.rs  include_empty_pages.rs  include_external_url.rs  include_future_publish_at.rs  include_future_updates.rs  include_unavailable.rs  language.rs  legacy_mapping_type.rs  lib.rs  macros.rs  manga_link.rs  manga_state.rs  mangadex_datetime.rs  mangadex_duration.rs  oauth.rs  order_direction.rs  password.rs  rate_limit.rs  report_category.rs  report_status.rs  result.rs  sort_order.rs  static_data.rs  tag.rs  tag_search_mode.rs  upload_source.rs  user_role.rs  username.rs
mangadex-api/examples/: download_chapter.rs  download_chapter_via_utils_stream.rs  download_chapter_via_utils_stream_with_checker.rs  download_chapter_via_utils_vecs.rs  download_cover_via_utils.rs  download_cover_via_utils_manga_id.rs  fetch_popular_titles.rs  getting-started.rs  latest_updates.rs  legacy_cover_download.rs  legacy_download_chapter.rs  login.rs  manga_covers.rs  map_legacy_ids.rs  oauth_login.rs  oauth_login_refresh.rs  oauth_manga_feed.rs  search_manga_by_title.rs  search_manga_by_title_with_reference_expansion.rs  setting_a_custom_user_agent.rs  upload.rs  v5_demo.rs
mangadex-api/src/: constants.rs  error.rs  http_client.rs  lib.rs  macros.rs  rate_limit.rs  traits.rs  utils.rs  v5.rs
rspc-mangadex-api/src-tauri/: Cargo.toml  tauri.conf.json
taurpc-mangadex-api-example/src-tauri/: Cargo.toml  tauri.conf.json
(+592 files in other folders)
