[workspace]
resolver = "3"
members = [
    "mangadex-api-types",
    "mangadex-api-schema",
    "mangadex-api",
    "mangadex-api-tests",
    "mangadex-api-input-types", "mangadex-api-wasm-test",
]
default-members = ["mangadex-api"]

[workspace.dependencies]
syn = "2"
darling = "0.23"
proc-macro2 = "1"
quote = "1"
tokio = { version = "1", default-features = false }
serde_json = "1"
color-print = "0.3.6"
jsonxf = "1"
anyhow = "1"
derive_builder = "0.20"
reqwest = { version = "0.13", default-features = false, features = [
    "http2",
    "charset",
    "system-proxy",
    "cookies",
    "json",
    "multipart",
] }
serde = { version = "1", features = ["derive"]}
thiserror = "2"
time = { version = "0.3", features = [
    "serde-human-readable",
    "large-dates",
    "local-offset",
] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.8", features = ["serde"] }
async-graphql = "7"
specta = { version = "1", features = ["uuid", "url", "time"] }
futures = "0.3"
bytes = "1.6"
serde_urlencoded = "0.7"
clap = "4.5.4"
fake = "4.0.0"
async-stream = "0.3"
tokio-stream = "0.1"
getset = "0"
wiremock = "0.6"
serde_qs = "0.15"
non-exhaustive = "0.1"
wasm-bindgen = "0.2"
log = "0.4"

[workspace.dependencies.mangadex-api-types]
package = "mangadex-api-types-rust"
path = "./mangadex-api-types"
version = "1"
default-features = false

[workspace.dependencies.mangadex-api-schema]
package = "mangadex-api-schema-rust"
path = "./mangadex-api-schema"
version = "1"
default-features = false

[workspace.dependencies.mangadex-api]
path = "./mangadex-api"
version = "4"

[workspace.package]
edition = "2024"
rust-version = "1.85"
