[package]
name = "mangadex-api-input-types"
version = "1.0.0"
authors = [ "tonymushah" ]
description = "A collection input types for mangadex-api"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tonymushah/mangadex-api"

[dependencies]
serde.workspace = true
specta = { workspace = true , optional = true }
async-graphql = { workspace = true, optional = true, features = ["uuid", "url"] }

[dependencies.uuid]
workspace = true
features = [
    "serde",
    "v4",
]

[dependencies.url]
workspace = true
features = ["serde"]

[dependencies.mangadex-api]
optional = true
workspace = true

[dependencies.mangadex-api-schema]
workspace = true
default-features = false

[dependencies.mangadex-api-types]
workspace = true
default-features = false

[features]
default = ["mangadex-api-resolver"]
serialize = []
mangadex-api-resolver = ["dep:mangadex-api"]
specta = ["dep:specta", "mangadex-api-types/specta"]
async-graphql = ["dep:async-graphql", "mangadex-api-types/async-graphql"]
