[package]
name = "mangadex-api-params-types"
version = "0.0.0"
authors = [ "tonymushah" ]
description = ""
edition = "2021"
rust-version = "1.60"

[dependencies]
serde = "1.0"
specta = { version = "1.0.5", features = ["export"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[dependencies.uuid]
version = "1.6.1"
features = [
    "serde",
    "v4",
]

[dependencies.url]
version = "2.5.0"
features = ["serde"]

[dependencies.mangadex-api]
optional = true
path = "../mangadex-api"
version = "3.0.0-rc.3"
features = ["specta"]

[dependencies.mangadex-api-schema]
package = "mangadex-api-schema-rust"
version = "0.5"
path = "../mangadex-api-schema"
default-features = false
features = ["specta", "serialize"]

[dependencies.mangadex-api-types]
package = "mangadex-api-types-rust"
version = "0.5"
path = "../mangadex-api-types"
default-features = false
features = ["specta"]

[features]
default = ["mangadex-api-resolver"]
mangadex-api-resolver = ["dep:mangadex-api"]