[package]
edition.workspace = true
name = "mangadex-api-schema-rust"
version = "1.0.0"
authors = ["tonymushah <tonymushahdev06@yahoo.com>"]
description = "Response structs and helpers for mangadex-api"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tonymushah/mangadex-api"
resolver = "2"
keywords = ["mangadex", "response-schemas"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"]}
serde_json = { workspace = true }
jsonxf = { workspace = true }
color-print = { workspace = true }

[dependencies.serde]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.url]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.specta]
optional = true
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.mangadex-api-types]
workspace = true

[features]
specta = ["dep:specta", "mangadex-api-types/specta"]
serialize = []
