[package]
edition.workspace = true
name = "mangadex-api-types-rust"
version = "1.0.0"
authors = ["tonymushah <tonymushahdev06@yahoo.com>"]
description = "Types for mangadex-api"
license = "MIT OR Apache-2.0"
rust-version.workspace = true
repository = "https://github.com/tonymushah/mangadex-api"
keywords = ["mangadex", "types-bindings"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"]}
serde_json = "1"

[dev-dependencies.anyhow]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.time]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.async-graphql]
workspace = true
optional = true

[dependencies.specta]
workspace = true
optional = true

[features]
specta = ["dep:specta"]
async-graphql = ["dep:async-graphql"]
