[package]
edition.workspace = true
name = "mangadex-api"
version = "4.1.0"
authors = ["gondolyr <gondolyr@tutanota.com>", "tonymushah tonymushahdev06@yahoo.com"]
description = "SDK for the MangaDex API"
readme = "../README.md"
keywords = [
    "api",
    "client",
    "mangadex",
    "sdk",
]
rust-version.workspace = true
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tonymushah/mangadex-api"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[lib]
name = "mangadex_api"
path = "src/lib.rs"

[dependencies.derive_builder]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.mangadex-api-schema]
workspace = true

[dependencies.mangadex-api-types]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serde_qs]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.time]
workspace = true

[dependencies.url]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.bytes]
workspace = true
optional = true

[dev-dependencies.anyhow]
workspace = true

[dev-dependencies.serde_urlencoded]
workspace = true

[dependencies.non-exhaustive]
workspace = true

[dev-dependencies.clap]
workspace = true
features = ["derive"]

[dev-dependencies.fake]
workspace = true

[dev-dependencies.serde_json]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = [
    "macros",
    "rt-multi-thread",
]

[dependencies.tokio]
workspace = true
features = ["sync"]

[dependencies.async-stream]
workspace = true
optional = true

[dependencies.tokio-stream]
workspace = true
optional = true

[dependencies.getset]
workspace = true
optional = true

[dev-dependencies.wiremock]
workspace = true

[dev-dependencies.uuid]
workspace = true
features = ["v4"]

[features]
default = ["oauth", "reqwest/rustls"]
utils = ["dep:bytes", "dep:async-stream", "dep:tokio-stream", "reqwest/stream"]
deserializable-endpoint = ["dep:getset"]
oauth = ["reqwest/form"]
custom_list_v2 = []

[[example]]
name = "oauth_manga_feed"
required-features = ["oauth", "mangadex-api-schema/serialize"]

[[example]]
name = "download_chapter_via_utils_vecs"
required-features = ["utils"]

[[example]]
name = "download_chapter_via_utils_stream"
required-features = ["utils"]

[[example]]
name = "download_chapter_via_utils_stream_with_checker"
required-features = ["utils"]

[[example]]
name = "download_cover_via_utils_manga_id"
required-features = ["utils"]

[[example]]
name = "download_cover_via_utils"
required-features = ["utils"]

[[example]]
name = "oauth_login"
required-features = ["oauth"]

[[example]]
name = "oauth_login_refresh"
required-features = ["oauth"]

[[example]]
name = "upload"
required-features = ["oauth"]
