[package]
name = "rspc-mangadex-api"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "1.0.5", features = ["export"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rspc = {version = "0", features = ["tauri"]}

[dependencies.uuid]
version = "1.5.0"
features = [
    "serde",
    "v4",
]

[dependencies.url]
version = "2.4.1"
features = ["serde"]

[dependencies.mangadex-api]
path = "../../mangadex-api"
version = "3.0.0-rc.1"
features = ["rw-multi-thread", "specta"]

[dependencies.mangadex-api-schema]
package = "mangadex-api-schema-rust"
version = "0.5"
path = "../../mangadex-api-schema"
default-features = false
features = ["specta", "serialize"]

[dependencies.mangadex-api-types]
package = "mangadex-api-types-rust"
version = "0.5"
path = "../../mangadex-api-types"
default-features = false
features = ["specta"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
