[package]
name = "mangadex"
version = "0.1.0"
description = "mangadex-api example"
authors = ["you"]
license = ""
repository = "https://github.com/tonymushah/mangadex-api"
default-run = "mangadex"
edition = "2021"
rust-version = "1.60"
exclude = ["../src", "../node_modules"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
mangadex-api = { version = "3.0.0-rc.1", path = "../../mangadex-api"}
taurpc = "0.2.3"
specta = { version = "1.0.5", features = ["export"] }
tokio = { version = "1", features = ["full"] }

[dependencies.taurpc-mangadex-api]
path = "../../taurpc-mangadex-api"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
